fix(style): fix overflow behavior

--- a/src/shared/ui/Tabs/TabsList/TabsList.module.scss
+++ b/src/shared/ui/Tabs/TabsList/TabsList.module.scss
@@ -1,4 +1,6 @@
 .list {
+  scrollbar-width: thin;
+  overflow-x: auto;
   display: flex;
-  justify-content: space-between;
+  white-space: nowrap;
 }
